Bug 1877022 [Wayland] Don't switch away from native wake lock inhibitor r=emilio

Better to try inhibit native wake lock again that to switch to Unsupported one and disable it at all.

Differential Revision: https://phabricator.services.mozilla.com/D201709